Improving cropper integration

--- a/image_widget_crop.libraries.yml
+++ b/image_widget_crop.libraries.yml
@@ -14,7 +14,10 @@ cropper:
 cropper.integration:
   version: 1.0
   js:
-    js/cropper.integration.js: {}
+    js/imageWidgetCrop.js: {}
+  css:
+    theme:
+      css/image_widget_crop.css: {}
   dependencies:
     - core/jquery
     - core/drupal
