--- a/image_widget_crop.libraries.yml
+++ b/image_widget_crop.libraries.yml
@@ -1,16 +1,8 @@
 cropper:
   title: 'Cropper'
-  website: http://fengyuanchen.github.io/cropper/
-  version: 2.1.0
-  license:
-    name: MIT
-    url: https://github.com/fengyuanchen/cropper/blob/master/LICENSE
-    gpl-compatible: true
-  js:
-    /libraries/cropper/dist/cropper.min.js: {}
-  css:
-    component:
-      /libraries/cropper/dist/cropper.min.css: {}
+  dependencies:
+    - core/jquery
+
 cropper.integration:
   version: 1.0
   js:
