--- a/config/install/image_widget_crop.settings.yml
+++ b/config/install/image_widget_crop.settings.yml
@@ -1,4 +1,4 @@
 settings:
   crop_upload_location: 'public://crop/pictures/'
-  library_url: ''
-  css_url: ''
+  library_url: 'https://cdnjs.cloudflare.com/ajax/libs/cropper/2.1.0/cropper.min.js'
+  css_url: 'https://cdnjs.cloudflare.com/ajax/libs/cropper/2.1.0/cropper.min.css'
